# ReversiRust

./: .gitignore  Cargo.toml  README.md  project_info.txt  todo
src/: main.rs
