[package]
name = "reversi_mcts"
version = "0.1.0"
authors = ["Nick Chubb <Nick.r.chubb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
rand = "0.7.3"
indexmap = "1.5.0"
ansi_term = "0.12.1"
libmath = "0.2.1"
