[package]
name = "reversi"
description = "A Rust implementation of a Reversi (Othello) game."
repository = "https://github.com/NickChubb/ReversiRust"
version = "0.1.0"
authors = ["Nick Chubb <nick@nickchubb.ca>", "Faraz Borghei <f.borghei97@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["games"]
keywords = ["reversi", "othello", "game", "mcts", "ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
rand = "0.7.3"
indexmap = "1.5.0"
ansi_term = "0.12.1"
libmath = "0.2.1"
